# ModePlait

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/covid19/: __init__.py
data/google/: __init__.py
data/mocap/: __init__.py
data/synthetics/: __init__.py
src/: main.py
src/config/: config.yaml
src/config/model/: modeplait.yaml
src/models/: base.py
src/models/modeplait/: mdb.py  model.py  run.py
src/models/modeplait/module/: dmd.py  nlds.py  regime.py  regime_storage.py
src/utils/: __init__.py  io_helper.py  metrics.py  params_set.py  preprocessor.py
tests/: test_cuda.py
